--- a/LogbookServiceClient/LogbookServiceClient/LogbookServiceClient.csproj
+++ b/LogbookServiceClient/LogbookServiceClient/LogbookServiceClient.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\LogbookService\LogbookService\LogbookService.csproj" />
+  </ItemGroup>
+
 </Project>
