Modifies dynamodb tables and adds a table manager
- Table manager is used to delete and re-create tables within the test environment.
- Adjusted `appsettings.json` to be `us-east` not `eu-east`
- Renamed `DropZone` to `Dropzone`
- Incorporated `DynamoDBTableManager` class into `Program.cs`

--- a/src/LogbookServiceClient/LogbookServiceClient/appsettings.json
+++ b/src/LogbookServiceClient/LogbookServiceClient/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "AWS": {
-    "Region": "eu-west-1"
+    "Region": "us-west-1"
   },
   "DynamoDb": {
     "LocalMode": false
