Adds dependency injection for DynamoDBContext

--- a/src/LogbookServiceClient/LogbookServiceClient/appsettings.Development.json
+++ b/src/LogbookServiceClient/LogbookServiceClient/appsettings.Development.json
@@ -1,4 +1,11 @@
 {
+  "Kestrel": {
+    "Endpoints": {
+      "Https": {
+        "Url": "http://localhost:5086"
+      }
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
