--- a/.github/workflows/test-dotnet.yml
+++ b/.github/workflows/test-dotnet.yml
@@ -7,10 +7,10 @@ on:
 
 jobs:
   build:
-    runs-on: macos-12
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        dotnet-version: ['6.x']
+        dotnet-version: ['6.0.x']
     steps:
       - uses: actions/checkout@v3
       - name: Setup dotnet
