--- a/src/LogbookServiceClient/LogbookServiceClient/LogbookServiceClient.csproj
+++ b/src/LogbookServiceClient/LogbookServiceClient/LogbookServiceClient.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FoolProof.Core" Version="1.1.35" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
