Protect keys and changed access to dynamodb settings

--- a/src/LogbookServiceClient/LogbookServiceClient/appsettings.Development.json
+++ b/src/LogbookServiceClient/LogbookServiceClient/appsettings.Development.json
@@ -14,6 +14,10 @@
   },
   "DynamoDb": {
     "LocalMode": true,
-    "LocalServiceUrl": "http://localhost:8000"
+    "ServiceUrl": "http://localhost:8000",
+    "ConsistentRead": true,
+    "IgnoreNullValues": true,
+    "SkipVersionCheck": true,
+    "TableNamePrefix": null
   }
 }
