--- a/src/LogbookServiceClient/LogbookServiceClient/appsettings.json
+++ b/src/LogbookServiceClient/LogbookServiceClient/appsettings.json
@@ -10,6 +10,11 @@
     "Region": "us-west-1"
   },
   "DynamoDb": {
-    "LocalMode": false
+    "LocalMode": false,
+    "ServiceUrl": "",
+    "ConsistentRead": true,
+    "IgnoreNullValues": true,
+    "SkipVersionCheck": true,
+    "TableNamePrefix": null
   }
 }
