--- a/src/LogbookService/LogbookService/LogbookService.csproj
+++ b/src/LogbookService/LogbookService/LogbookService.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AWS.EncryptionSDK" Version="3.1.0" />
     <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.5" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
