--- a/src/LogbookServiceClient/LogbookServiceClient/appsettings.Development.json
+++ b/src/LogbookServiceClient/LogbookServiceClient/appsettings.Development.json
@@ -19,5 +19,8 @@
     "IgnoreNullValues": true,
     "SkipVersionCheck": true,
     "TableNamePrefix": null
+  },
+  "Jwt": {
+    "ExpiresInDays": 1
   }
 }
