--- a/src/LogbookService/LogbookService/LogbookService.csproj
+++ b/src/LogbookService/LogbookService/LogbookService.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="AWS.EncryptionSDK" Version="3.1.0" />
     <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.5" />
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
