Google Auth - No more error - returns 404 now

--- a/src/LogbookServiceClient/LogbookServiceClient/Properties/launchSettings.json
+++ b/src/LogbookServiceClient/LogbookServiceClient/Properties/launchSettings.json
@@ -10,6 +10,7 @@
   },
   "profiles": {
     "Logbook": {
+      "authenticationMode": "Windows",
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
