--- a/src/LogbookServiceClient/LogbookServiceClient/LogbookServiceClient.csproj
+++ b/src/LogbookServiceClient/LogbookServiceClient/LogbookServiceClient.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="FoolProof.Core" Version="1.1.35" />
     <PackageReference Include="Google.Apis.Auth.AspNetCore3" Version="1.57.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="6.0.10" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Negotiate" Version="6.0.10" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.24.0" />
   </ItemGroup>
