--- a/src/LogbookServiceClient/LogbookServiceClient/Properties/launchSettings.json
+++ b/src/LogbookServiceClient/LogbookServiceClient/Properties/launchSettings.json
@@ -15,7 +15,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7120;http://localhost:5297",
+      "applicationUrl": "https://localhost:7120",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
