--- a/src/LogbookServiceClient/LogbookServiceClient/LogbookServiceClient.csproj
+++ b/src/LogbookServiceClient/LogbookServiceClient/LogbookServiceClient.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.0" />
     <PackageReference Include="FoolProof.Core" Version="1.1.35" />
     <PackageReference Include="Google.Apis.Auth.AspNetCore3" Version="1.57.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="6.0.10" />
