--- a/src/LogbookServiceClient/LogbookServiceClient/appsettings.json
+++ b/src/LogbookServiceClient/LogbookServiceClient/appsettings.json
@@ -1,8 +1,19 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "DataSource=app.db;Cache=Shared"
+  },
   "Logging": {
-    "LogLevel": {
+      "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+      }
+    },
+  "IdentityServer": {
+    "Clients": {
+      "LogbookServiceClient": {
+        "Profile": "IdentityServerSPA"
+      }
     }
   },
   "AllowedHosts": "*",
