Trying to customize login page

--- a/src/LogbookServiceClient/LogbookServiceClient/appsettings.json
+++ b/src/LogbookServiceClient/LogbookServiceClient/appsettings.json
@@ -23,6 +23,7 @@
   "DynamoDb": {
     "LocalMode": false,
     "ServiceUrl": "",
+    "Region": "us-west-1",
     "ConsistentRead": true,
     "IgnoreNullValues": true,
     "SkipVersionCheck": true,
