--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,12 @@ services:
     working_dir: /home/dynamodblocal
     command: "-jar DynamoDBLocal.jar -sharedDb -dbPath ."
 
+  dotnet-api:
+    container_name: dotnet-api
+    image: dotnet-api
+    build:
+      context: ./src/LogbookServiceClient/LogbookServiceClient
+    
 networks:
   local-dynamodb:
     name: local-dynamodb
