--- a/src/LogbookApp/package.json
+++ b/src/LogbookApp/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.14",
+    "@mui/material": "^5.10.14",
     "bootstrap": "^5.2.2",
     "http-proxy-middleware": "^2.0.6",
     "jquery": "^3.6.1",
